This is V2.0.15 (August 20 1998). New features include:
- ``Purify'' warnings and memory leaks fixed in several parts of the program.
- BLANKing bug of CLEANed pixels fixed.

/*- Previous notes for V2.0.14 (July 28 1998) */
- Internal handling of CDELTx changed (once more!) to allow proper scaling on the
  MINIBACKGROUND images.

/*- Previous notes for V2.0.13 (July 23 1998) */
- 2 small (but fatal on some machines) bug fixes.
- Comments (beginning with #) now allowed at every line in .param files
- Default parameters updated in the config files (reflecting the increase
  of processing power during the last years!!)

/*- Previous notes for V2.0.11 (July 9 1998) */
- Background filtering bug at image borders fixed.
- CDx_x FITS WCS parameters are now given priority.

/*- Previous notes for V2.0.10 (June 30 1998) */
- Astrometry bug with CDx_x FITS parameters fixed.
- Interpolation bug in VAR_ONLY mode fixed.

/*- Previous notes for V2.0.8 (May 14 1998) */
- BACKGROUND check-image bug fixed.
- Old bug in filter normalization fixed.
- Bug in the reading of FITS header astrometric info fixed.

/*- Previous notes for V2.0.7 (May 3 1998) */
- Bug with VAR_ONLY interpolations fixed.
- Improve robustness toward incorrect FITS headers and empty images.
- A few bugs corrected (most of them introduced in the previous release!!)

/*- Previous notes for V2.0.5 (April 30 1998) */
- Multiple FLAG_MAPs now supported: IMAFLAG_ISO and NIMAFLAG_ISO have become
  vectors.
- Bug with FLAG_TYPEs MIN and MAX fixed.

/*- Previous notes for V2.0.2 (April 15 1998) */
- New banner
- Bug fixes: background on empty images, CLEANing in double-image mode.

/*- Previous notes for V2.0.0 (March 30 1998) */
- Renaming of the software and update of the proto-documentation
- New EXTRA_WARNINGS option to VERBOSE_TYPE config parameter.
- The usual amount of bug-fixes.

/*- Previous notes for V1.2b20b (March 24 1998) */
- XPEAK_ and YPEAK_ catalog parameters, that give the position of the brightest