@@ -26,6 +26,7 @@
 #include	"field.h"
 #include	"filter.h"
 #include	"interpolate.h"
+#include        "astrom.h"
 
 /********************************* newfield **********************************/
 /*
