@@ -16,6 +16,7 @@
 
 #include	<limits.h>
 #include	<stdlib.h>
+#include        <string.h>  /* PWD: change here */
 
 #include	"define.h"
 #include	"globals.h"
